--- a/dcx_unified/configs/heart.yaml
+++ b/dcx_unified/configs/heart.yaml
@@ -1,4 +1,5 @@
 name: "xray2heart"
+module_type: "basic_segmentation"
 checkpoint_path: "checkpoints/xray2heart.pth"
 loadSize: 512
 threshold: -1015
@@ -9,3 +10,4 @@ normalization_method: "percentile"
 percentile_min: 0
 percentile_max: 99
 requires_lung_mask: false
+interpolation: "LANCZOS"
