--- a/dcx_unified/configs/heart_volumetry.yaml
+++ b/dcx_unified/configs/heart_volumetry.yaml
@@ -1,4 +1,5 @@
 name: "heart_volumetry"
+module_type: "volumetry"
 checkpoint_path: "checkpoints/xray2heart.pth"
 regression_checkpoint_path: "checkpoints/heartregression.pth"
 loadSize: 512
@@ -11,3 +12,4 @@ normalization_method: "percentile"
 percentile_min: 0
 percentile_max: 99
 requires_lung_mask: false
+interpolation: "LANCZOS"
