--- a/dcx_unified/configs/lung.yaml
+++ b/dcx_unified/configs/lung.yaml
@@ -1,4 +1,5 @@
 name: "xray2lung"
+module_type: "basic_segmentation"
 checkpoint_path: "checkpoints/xray2lung.pth"
 loadSize: 2048
 threshold: -1015
@@ -10,3 +11,4 @@ normalization_method: "percentile"
 percentile_min: 0
 percentile_max: 99
 requires_lung_mask: false
+interpolation: "NEAREST"
