--- a/.github/workflows/build-windows.yml
+++ b/.github/workflows/build-windows.yml
@@ -21,12 +21,17 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install -r requirements.txt
+        pip install -r requirements-windows.txt
         pip install nuitka
+    
+    - name: Fix Python path for imports
+      run: |
+        echo "import sys; sys.path.append('core')" > path_fix.py
+        type path_fix.py inference.py > inference_fixed.py
     
     - name: Build inference.exe with Nuitka
       run: |
-        python -m nuitka --standalone --onefile --assume-yes-for-downloads --windows-disable-console --enable-plugin=numpy --include-data-dir=configs=configs --include-data-dir=src=src --output-dir=dist inference.py
+        python -m nuitka --standalone --assume-yes-for-downloads --output-dir=dist --follow-imports inference_fixed.py
     
     - name: Test executable exists
       run: |
@@ -37,4 +42,4 @@ jobs:
       uses: actions/upload-artifact@v3
       with:
         name: dcx-windows-exe
-        path: dist/inference.exe
+        path: dist/inference_fixed.dist/*
