--- a/.github/workflows/build-windows.yml
+++ b/.github/workflows/build-windows.yml
@@ -1,4 +1,4 @@
-name: Build Windows Executables
+name: Build Windows Executable (Ray Version)
 
 on:
   push:
@@ -6,35 +6,6 @@ on:
   workflow_dispatch:  # Allows manual trigger from GitHub website
 
 jobs:
-  build-inference:
-    runs-on: windows-latest
-    
-    steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
-    
-    - name: Set up Python 3.9
-      uses: actions/setup-python@v5
-      with:
-        python-version: '3.9'
-    
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements-windows.txt
-        pip install nuitka
-    
-    - name: Build inference.exe
-      run: |
-        echo Building inference.exe...
-        python -m nuitka --standalone --assume-yes-for-downloads --output-dir=dist-inference --follow-imports inference.py
-    
-    - name: Upload inference.exe artifact
-      uses: actions/upload-artifact@v4
-      with:
-        name: inference-windows
-        path: dist-inference/inference.dist/
-
   build-inference-ray:
     runs-on: windows-latest
     
@@ -58,39 +29,17 @@ jobs:
         echo Building inference_ray.exe...
         python -m nuitka --standalone --assume-yes-for-downloads --jobs=4 --output-dir=dist-inference-ray --follow-imports inference_ray.py
     
-    - name: Upload inference_ray.exe artifact
-      uses: actions/upload-artifact@v4
-      with:
-        name: inference-ray-windows
-        path: dist-inference-ray/inference_ray.dist/
-
-  combine-artifacts:
-    needs: [build-inference, build-inference-ray]
-    runs-on: windows-latest
-    
-    steps:
-    - name: Download inference artifact
-      uses: actions/download-artifact@v4
-      with:
-        name: inference-windows
-        path: ./inference
-    
-    - name: Download inference_ray artifact
-      uses: actions/download-artifact@v4
-      with:
-        name: inference-ray-windows
-        path: ./inference_ray
-    
-    - name: Create combined distribution
+    - name: Create distribution package
       run: |
-        mkdir dcx-windows
-        xcopy inference dcx-windows\inference\ /E /I
-        xcopy inference_ray dcx-windows\inference_ray\ /E /I
-        echo DCX Windows Build > dcx-windows\README.txt
-        dir dcx-windows
+        mkdir dcx-windows-ray
+        xcopy dist-inference-ray\inference_ray.dist dcx-windows-ray\ /E /I
+        echo DCX Windows Build (Ray Version) > dcx-windows-ray\README.txt
+        echo. >> dcx-windows-ray\README.txt
+        echo Usage: inference_ray.exe --input file.dcm --output_dir results --all_modules >> dcx-windows-ray\README.txt
+        dir dcx-windows-ray
     
-    - name: Upload combined Windows executables
+    - name: Upload Windows executable
       uses: actions/upload-artifact@v4
       with:
-        name: dcx-windows-executables
-        path: dcx-windows/**
+        name: dcx-windows-ray-executable
+        path: dcx-windows-ray/**
