--- a/requirements.txt
+++ b/requirements.txt
@@ -1,489 +1,35 @@
-absl-py==2.1.0
-accelerate==0.33.0
-acvl_utils==0.2.5
-addict==2.4.0
-adlfs==2024.12.0
-aiobotocore==2.21.1
-aiohappyeyeballs==2.6.1
-aiohttp==3.11.16
-aiohttp-retry==2.9.1
-aioitertools==0.12.0
-aiooss2==0.2.10
-aiosignal==1.3.1
-alembic==1.15.2
-aliyun-python-sdk-core==2.16.0
-aliyun-python-sdk-kms==2.16.5
-amqp==5.3.1
-annotated-types==0.7.0
-anthropic==0.51.0
-antlr4-python3-runtime==4.9.3
-anyio==4.4.0
-appdirs==1.4.4
-appnope==0.1.4
-argcomplete==3.6.2
-asgiref==3.8.1
-asttokens==2.4.1
-astunparse==1.6.3
-asyncssh==2.20.0
-atpublic==5.1
-attrs==24.2.0
-auth0-python==4.9.0
-azure-core==1.33.0
-azure-datalake-store==0.0.53
-azure-identity==1.21.0
-azure-storage-blob==12.25.1
-backoff==2.2.1
-batchgenerators==0.25.1
-batchgeneratorsv2==0.2.3
-bcrypt==4.3.0
-beautifulsoup4==4.13.3
-billiard==4.2.1
-bleach==6.2.0
-blinker==1.9.0
-blosc2==3.3.1
-bokeh==3.6.3
-boto3==1.37.1
-botocore==1.37.1
-build==1.2.2.post1
-cachetools==5.5.2
-celery==5.5.2
-certifi==2024.7.4
-cffi==1.17.1
-charset-normalizer==3.3.2
-chroma-hnswlib==0.7.6
-chromadb==0.5.23
-click==8.1.8
-click-didyoumean==0.3.1
-click-plugins==1.1.1
-click-repl==0.3.0
-cloudpickle==3.1.1
-cohere==5.14.2
-colorama==0.4.6
-coloredlogs==15.0.1
-comm==0.2.2
-ConfigArgParse==1.7
-configobj==5.0.9
-connected-components-3d==3.23.0
-contourpy==1.2.1
-crcmod==1.7
-crewai==0.108.0
-crewai-tools==0.38.1
-cryptography==43.0.3
-cycler==0.12.1
-Cython==3.0.11
-dash==2.18.2
-dash-core-components==2.0.0
-dash-html-components==2.0.0
-dash-table==5.0.0
-databricks-sdk==0.50.0
-dataclasses-json==0.6.7
-debugpy==1.8.2
-decorator==5.1.1
-deepspeed==0.16.7
-Deprecated==1.2.18
-deprecation==2.1.0
-dicom2nifti==2.6.1
-dictdiffer==0.9.0
-diffusers==0.30.0
-diskcache==5.6.3
-distro==1.9.0
-dlib==19.24.6
-dnspython==2.6.1
-docker==7.1.0
-docker-pycreds==0.4.0
-docstring_parser==0.16
-dpath==2.2.0
-dulwich==0.22.8
-durationpy==0.9
-dvc==3.59.1
-dvc-azure==3.1.0
-dvc-data==3.16.9
-dvc-gdrive==3.0.1
-dvc-gs==3.0.1
-dvc-hdfs==3.0.0
-dvc-http==2.32.0
-dvc-objects==5.1.0
-dvc-oss==3.0.0
-dvc-render==1.0.2
-dvc-s3==3.2.0
-dvc-ssh==4.2.1
-dvc-studio-client==0.21.0
-dvc-task==0.40.2
-dvc-webdav==3.0.0
-dvc-webhdfs==3.1.0
-dynamic_network_architectures==0.3.1
-efficientnet_pytorch==0.7.1
-einops==0.8.1
-email_validator==2.2.0
-embedchain==0.1.128
-entrypoints==0.4
-et-xmlfile==1.1.0
-executing==2.0.1
-fastapi==0.115.9
-fastapi-cli==0.0.4
-fastavro==1.10.0
-fastjsonschema==2.20.0
-fft-conv-pytorch==1.2.0
-filelock==3.13.4
-Flask==3.0.3
-flatbuffers==24.3.25
-flatten-dict==0.4.2
-flufl.lock==8.1.0
-fonttools==4.51.0
-freetype-py==2.5.1
-frozenlist==1.4.1
-fsspec==2024.3.1
-funcy==2.0
-future==1.0.0
-gast==0.6.0
-gcsfs==2024.3.1
-gitdb==4.0.11
-GitPython==3.1.43
-glcontext==3.0.0
-google-api-core==2.25.0rc0
-google-api-python-client==2.168.0
-google-auth==2.38.0
-google-auth-httplib2==0.2.0
-google-auth-oauthlib==1.2.2
-google-cloud-core==2.4.3
-google-cloud-storage==3.1.0
-google-crc32c==1.7.1
-google-pasta==0.2.0
-google-resumable-media==2.7.2
-googleapis-common-protos==1.69.2
-gptcache==0.1.44
-GPUtil==1.4.0
-grandalf==0.8
-graphene==3.4.3
-graphql-core==3.2.6
-graphql-relay==3.2.0
-graphviz==0.20.3
-grpcio==1.71.0
-grpcio-tools==1.71.0
-gto==1.7.2
-gunicorn==20.1.0
-h11==0.14.0
-h2==4.2.0
-h5py==3.13.0
-hjson==3.1.0
-hpack==4.1.0
-httpcore==1.0.5
-httplib2==0.22.0
-httptools==0.6.1
-httpx==0.27.0
-httpx-sse==0.4.0
-huggingface-hub==0.24.5
-humanfriendly==10.0
-hydra-core==1.3.2
-hyperframe==6.1.0
-idna==3.7
-imagecodecs==2025.3.30
-imageio==2.34.0
-imbalanced-learn==0.12.3
-importlib_metadata==8.2.0
-importlib_resources==6.5.2
-instructor==1.7.9
-ipykernel==6.29.5
-ipython==8.26.0
-ipywidgets==8.1.5
-isodate==0.7.2
-iterative-telemetry==0.0.10
-itsdangerous==2.2.0
-jax==0.4.34
-jaxlib==0.4.34
-jedi==0.19.1
-Jinja2==3.1.6
-jiter==0.8.2
-jmespath==0.10.0
-joblib==1.4.2
-json5==0.12.0
-json_repair==0.40.0
-jsonpatch==1.33
-jsonpickle==4.0.5
-jsonpointer==3.0.0
-jsonref==1.1.0
-jsonschema==4.23.0
-jsonschema-specifications==2023.12.1
-jupyter_client==8.6.2
-jupyter_core==5.7.2
-jupyterlab_widgets==3.0.13
-kaleido==0.2.1
-keras==3.9.2
-kiwisolver==1.4.5
-knack==0.12.0
-kombu==5.5.3
-kubernetes==32.0.1
-lancedb==0.21.2
-langchain==0.3.23
-langchain-cohere==0.3.5
-langchain-community==0.3.21
-langchain-core==0.3.51
-langchain-experimental==0.3.4
-langchain-openai==0.2.14
-langchain-text-splitters==0.3.8
-langsmith==0.3.24
-lazy_loader==0.4
-lazypredict==0.2.12
-libclang==18.1.1
-lightgbm==4.5.0
-lightning-utilities==0.11.8
-linecache2==1.0.0
-linkify-it-py==2.0.3
-litellm==1.60.2
-llvmlite==0.43.0
-Mako==1.3.9
-Markdown==3.7
-markdown-it-py==3.0.0
-MarkupSafe==2.1.5
-marshmallow==3.26.1
-matplotlib==3.8.4
-matplotlib-inline==0.1.7
-matplotlib-venn==1.1.1
-mdit-py-plugins==0.4.2
-mdurl==0.1.2
-mediapipe==0.10.20
-mem0ai==0.1.85
-ml_dtypes==0.5.1
-mlflow==2.22.0
-mlflow-skinny==2.22.0
-mmh3==5.1.0
-moderngl==5.12.0
-moderngl-window==3.1.0
-monotonic==1.6
-more-itertools==10.6.0
-mpmath==1.3.0
-msal==1.32.3
-msal-extensions==1.3.1
-msgpack==1.0.8
-multidict==6.3.2
-mypy-extensions==1.0.0
-namex==0.0.8
-natsort==8.4.0
-nbformat==5.10.4
-ndindex==1.9.2
-nest-asyncio==1.6.0
-networkx==3.3
-nibabel==5.2.1
-ninja==1.11.1.4
-nltk==3.9.1
-nnunetv2==2.6.0
-nodeenv==1.9.1
-numba==0.60.0
-numexpr==2.10.2
-numpy==1.26.4
-oauth2client==4.1.3
-oauthlib==3.2.2
-omegaconf==2.3.0
-onnx==1.18.0
-onnxruntime==1.21.0
-open3d==0.19.0
-openai==1.70.0
-openai-whisper==20240930
-opencv-contrib-python==4.10.0.84
-opencv-python==4.9.0.80
-openpyxl==3.1.5
-opentelemetry-api==1.31.1
-opentelemetry-exporter-otlp-proto-common==1.31.1
-opentelemetry-exporter-otlp-proto-grpc==1.31.1
-opentelemetry-exporter-otlp-proto-http==1.31.1
-opentelemetry-instrumentation==0.52b1
-opentelemetry-instrumentation-asgi==0.52b1
-opentelemetry-instrumentation-fastapi==0.52b1
-opentelemetry-proto==1.31.1
-opentelemetry-sdk==1.31.1
-opentelemetry-semantic-conventions==0.52b1
-opentelemetry-util-http==0.52b1
-opt_einsum==3.4.0
-optree==0.14.1
-orjson==3.10.16
-oss2==2.18.1
-ossfs==2023.12.0
-overrides==7.7.0
-packaging==24.0
-pandas==2.2.2
-panel==1.6.0
-param==2.2.0
-parso==0.8.4
-pathspec==0.12.1
-patsy==1.0.1
-pdfminer.six==20250327
-pdfplumber==0.11.6
-pexpect==4.9.0
-pillow==10.3.0
-platformdirs==4.2.2
-plotly==5.24.1
-pooch==1.8.2
-portalocker==2.10.1
-posthog==3.23.0
-prompt_toolkit==3.0.47
-propcache==0.3.1
-proto-plus==1.26.1
-protobuf==4.25.7
-psutil==6.0.0
-psycopg2-binary==2.9.10
-ptyprocess==0.7.0
-pure_eval==0.2.3
-py-cpuinfo==9.0.0
-pyarrow==19.0.1
-pyasn1==0.6.1
-pyasn1_modules==0.4.2
-PyAudio==0.2.14
-pycparser==2.22
-pycryptodome==3.22.0
-pydantic==2.8.2
-pydantic-settings==2.8.1
-pydantic_core==2.20.1
-pydicom==3.0.1
-pydot==3.0.4
-PyDrive2==1.21.3
-pygit2==1.18.0
-pyglet==2.1.0
-PyGLM==2.7.3
-Pygments==2.18.0
-pygtrie==2.5.0
-PyJWT==2.10.1
-pylibjpeg==2.0.1
-pylibjpeg-libjpeg==2.2.0
-pylibjpeg-openjpeg==2.3.0
-pynndescent==0.5.13
-PyOpenGL==3.1.0
-pyOpenSSL==24.2.1
-pyparsing==3.1.2
-pypdf==5.4.0
-pypdfium2==4.30.1
-PyPika==0.48.9
-pyproject_hooks==1.2.0
-PyQt5==5.15.11
-PyQt5-Qt5==5.15.16
-PyQt5_sip==12.16.1
-pyquaternion==0.9.9
-pyrender==0.1.45
-pyright==1.1.398
-pysbd==0.3.4
-python-dateutil==2.9.0.post0
-python-dotenv==1.0.1
-python-gdcm==3.0.24.1
-python-multipart==0.0.9
-pytube==15.0.0
-pytz==2024.1
-pyvis==0.3.2
-pyvista==0.44.2
-pyvistaqt==0.11.1
-pyviz_comms==3.0.4
-PyYAML==6.0.1
-pyzmq==26.0.3
-qdrant-client==1.13.3
-QtPy==2.4.2
-ray==2.35.0
-referencing==0.35.1
-regex==2024.11.6
-requests==2.32.3
-requests-oauthlib==2.0.0
-requests-toolbelt==1.0.0
-retrying==1.3.4
-rich==13.7.1
-rpds-py==0.20.0
-rsa==4.9
-Rtree==1.3.0
-ruamel.yaml==0.18.10
-ruamel.yaml.clib==0.2.12
-s3fs==2024.3.1
-s3transfer==0.11.3
-safetensors==0.4.4
-schema==0.7.7
-scikit-image==0.24.0
-scikit-learn==1.5.1
-scipy==1.13.0
-scmrepo==3.3.10
-scooby==0.10.0
-seaborn==0.13.2
-segmentation_models_pytorch==0.5.0
-semver==3.0.4
-sentencepiece==0.2.0
-sentry-sdk==2.17.0
-setproctitle==1.3.3
-setuptools==75.2.0
-shellingham==1.5.4
-shortuuid==1.0.13
-shtab==1.7.2
-SimpleITK==2.4.1
-six==1.16.0
-smmap==5.0.1
-sniffio==1.3.1
-sounddevice==0.5.1
-soupsieve==2.6
-SQLAlchemy==2.0.40
-sqlparse==0.5.3
-sqltrie==0.11.2
-sshfs==2025.2.0
-stack-data==0.6.3
-starlette==0.45.3
-statsmodels==0.14.4
-stl==0.0.3
-sympy==1.12
-tabulate==0.9.0
-tenacity==9.0.0
-tensorboard==2.19.0
-tensorboard-data-server==0.7.2
-tensorboardX==2.6.2.2
-tensorflow==2.19.0
-termcolor==3.0.1
-textblob==0.19.0
-threadpoolctl==3.5.0
-tifffile==2024.4.18
-tiktoken==0.8.0
-timm==1.0.10
-tokenizers==0.19.1
-tomli==2.2.1
-tomli_w==1.2.0
-tomlkit==0.13.2
-torch==2.3.0
-torchaudio==2.3.0
-torchmetrics==1.5.1
-torchvision==0.18.0
-tornado==6.4.1
-TotalSegmentator==2.8.0
-tqdm==4.66.5
-traceback2==1.4.0
-traitlets==5.14.3
-transformers==4.44.0
-trimesh==4.5.3
-typer==0.12.3
-types-requests==2.32.0.20250328
-typing-inspect==0.9.0
-typing_extensions==4.13.1
-tzdata==2025.2
-uc-micro-py==1.0.3
-ultralytics==8.3.56
-ultralytics-thop==2.0.13
-umap-learn==0.5.6
-unittest2==1.1.0
-uritemplate==4.1.1
-urllib3==2.3.0
-usd-core==25.2.post1
-uv==0.6.12
-uvicorn==0.30.3
-uvloop==0.19.0
-vine==5.1.0
-voluptuous==0.15.2
-vtk==9.3.1
-wandb==0.19.11
-watchfiles==0.22.0
-wcwidth==0.2.13
-webdav4==0.10.0
-webencodings==0.5.1
-websocket-client==1.8.0
-websockets==12.0
-Werkzeug==3.0.6
-wheel==0.45.1
-widgetsnbextension==4.0.13
-wordcloud==1.9.4
-wrapt==1.17.2
-xgboost==2.1.1
-xvfbwrapper==0.2.11
-xyzservices==2025.1.0
-yacs==0.1.8
-yarl==1.19.0
-zc.lockfile==3.0.post1
-zipp==3.20.0
-zstandard==0.23.0
+# DCX Medical Imaging Inference System Requirements
+
+# Core PyTorch
+torch>=2.3.0
+torchvision>=0.18.0
+
+# Medical imaging libraries
+nibabel>=5.2.0
+pydicom>=3.0.0
+SimpleITK>=2.4.0
+
+# Image processing
+opencv-python>=4.9.0
+Pillow>=10.3.0
+scikit-image>=0.24.0
+
+# Scientific computing
+numpy>=1.26.0
+scipy>=1.13.0
+scikit-learn>=1.5.0
+
+# Data handling and visualization
+pandas>=2.2.0
+matplotlib>=3.8.0
+
+# Configuration
+PyYAML>=6.0.0
+
+# Optional: For advanced medical imaging (if needed)
+# segmentation_models_pytorch>=0.5.0
+# TotalSegmentator>=2.8.0
+
+# Development tools (optional)
+# jupyter
+# ipython
