--- a/requirements-windows.txt
+++ b/requirements-windows.txt
@@ -5,28 +5,28 @@
 # torchaudio>=2.3.0
 
 # Medical imaging libraries
-nibabel==5.2.1
-pydicom==3.0.1
-SimpleITK==2.4.1
+nibabel>=5.0.0
+pydicom>=2.4.0
+SimpleITK>=2.4.0
 
 # Image processing
-opencv-python==4.9.0.80
-Pillow==10.3.0
-scikit-image==0.24.0
+opencv-python>=4.9.0
+Pillow>=10.0.0
+scikit-image>=0.20.0
 
 # Scientific computing
-numpy==1.26.4
-scipy==1.13.0
-scikit-learn==1.5.1
+numpy>=1.24.0
+scipy>=1.10.0
+scikit-learn>=1.3.0
 
 # Data handling
-pandas==2.2.2
+pandas>=2.0.0
 
 # Visualization (minimal for diameter calculations)
-matplotlib==3.8.4
+matplotlib>=3.6.0
 
 # Configuration and utilities
-PyYAML==6.0.1
+PyYAML>=6.0.0
 
 # Build dependencies for Nuitka
 # Note: These are installed separately in the workflow to avoid conflicts
