--- a/requirements-windows.txt
+++ b/requirements-windows.txt
@@ -28,6 +28,9 @@ matplotlib>=3.6.0
 # Configuration and utilities
 PyYAML>=6.0.0
 
+# For LAA (Low Attenuation Areas) module
+segmentation-models-pytorch>=0.3.0
+
 # Build dependencies for Nuitka
 # Note: These are installed separately in the workflow to avoid conflicts
 # nuitka>=2.7.0
